# studyng

./: .gitignore  README.md
Django/django4course/: Makefile  docker-compose.yaml
Django/django4course/core/: Dockerfile  manage.py  pyproject.toml
Django/django4course/core/apps/women/: views.py
Django/django4course/core/django4course/: settings.py
Django/selfedu/django4course/: docker-compose.yaml
Django/selfedu/django4course/core/apps/women/: urls.py
Django/selfedu/django4course/core/django4course/: asgi.py  urls.py  wsgi.py
FastApi/first_project/: main.py  poetry_tutorial.txt  pyproject.toml  setup.py
FastApi/first_project/alembic/versions/: 2024_12_15_1409-a62b45d9303f_create_items_table.py
FastApi/first_project/api/v1/: __init__.py
FastApi/first_project/api/v1/items/: crud.py
FastApi/first_project/core/: config.py
FastApi/first_project/core/models/: __init__.py  items.py
FastApi/first_project/items/: views.py
FastApi/first_project/users/: crud.py  schemas.py  views.py
FastApi/microshop-project/: Tutorial.MD  alembic.ini  crud.py  main.py  poetry_tutorial.MD  pyproject.toml  setup.py
FastApi/microshop-project/alembic/: env.py
FastApi/microshop-project/alembic/versions/: 2024_12_15_1409-a62b45d9303f_create_items_table.py  2024_12_15_1439-0a9ad35404c1_create_users_table.py  2024_12_15_1453-dc9d0e6f3e8c_create_posts_table.py  2024_12_15_1536-e4826b79479a_create_profile_table.py  2025_02_02_1959-881e9098aa64_create_orders_table.py  2025_02_03_0120-7e27cbd3d141_create_order_item_association_table.py  2025_02_13_0058-fb3c7645af65_add_count_column_to_association_table.py
FastApi/microshop-project/api/v1/: __init__.py
FastApi/microshop-project/api/v1/demo_auth/: dependencies.py  handlers.py
FastApi/microshop-project/api/v1/items/: dependencies.py  handlers.py  schemas.py
FastApi/microshop-project/core/: config.py
FastApi/microshop-project/core/models/: __init__.py  base.py  database_halper.py  items.py  mixins.py  order_item_association.py  orders.py  posts.py  users.py
FastApi/microshop-project/old/users/: schemas.py
FastApi/tutorial/: alembic.MD  fastapi_routers.MD  fastapi_view_process.MD  sqlalchemy.MD
Python/OOP/: magic methods.py
Python/OOP/solid/: bad_examples.py  refactoring.py
Python/functions/: recursion.py
Python/problems/codewars/: solutions.py  tests.py
SQL/: work.sh
SQL/queries/: alter_update.sql  create table.sql  insert.sql  select.sql
WEB/HTTP/Auth /: auth.MD
telegram_bot/projects/aiogram3course/: config.py  pyproject.toml  run.py
telegram_bot/projects/aiogram3course/app/: handlers.py  keyboards.py  middleware.py  states.py
telegram_bot/projects/aiogram3course/envs/: .env
