[tool.poetry]
name = "microshop"
version = "0.1.0"
description = ""
authors = ["Aleksandr Petrov <a24923093@gmail.com>"]
license="MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
addefastapi = "0.112.1"
uvicorn = {extras = ["standart"], version = "^0.30.5"}
pydantic = {extras = ["email"], version = "^2.8.2"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
